@@ -12,6 +12,15 @@
 
 [-21 13  8  -5]
 
+
+[1126210459758 1822246802353  438668626759   709780747796]
+
+[   5645342155    9134355499 3372346191216  5456570759107]
+
+[1148588801119 -709866918189 2349699119200 -1452193919001]
+
+[-965010535345  596409310345 3157022227130 -1951147039605]
+
 [;]
 [;]
 [;]
@@ -81,4 +90,4 @@ error("incorrect type in qflllgram [integer matrix] (t_MAT).")
   ***   at top-level: qfminim([1,2,3;4,5,6],,,2)
   ***                 ^--------------------------
   *** qfminim: inconsistent dimensions in qflllgram.
-Total time spent: 0
+Total time spent: 1
