@@ -1,5 +1,6 @@
 qflllgram(matid(2)*1.)
 m=[219902325555200,60779507942430,113687426768697,93478400051083;219902325555200 ,60779507942430,61044718855924,60943417301157;214748364800,155393376570,17984250 9148,115833849065;214748364800,155393376570,134851934330,188630128295]; qflll(m, 1)
+qflll(m,3)
 M=[x, x^3 - 852*x^2 - 833561*x; x^3 + 1053355*x^2, x^5 + 1052503*x^4 - 898292021*x^3 - 878035647155*x^2 + 1];
 
 test()=
